# iditor

./: CMakeLists.txt
cmake/: ResourceBundling.cmake
inctest/: a.h  b.h  c.h  vector.cpp
src/main/: Db.cpp  Db.h  Declarations.cpp  Declarations.h  Editor.cpp  Editor.h  EditorDraw.cpp  EditorDraw.h  Globals.cpp  Globals.h  Highlighter.cpp  Highlighter.h  IditorUtil.h  Include.cpp  Include.h  Preproc.cpp  Preproc.h  Project.cpp  Project.h  TreeDiff.cpp  TreeDiff.h  iditor_tokenizer.cpp  iditor_tokenizer.h  main.cpp
src/main/decl/: Decl.cpp  Decl.h
src/test/: DeclarationsTest.cpp  PreprocTest.cpp  TreeDiffTest.cpp
